pootle/static/css/style.css
/* ... */
#footer a
{
    color: #999;
}

#footer .nav li
{
    display: inline;
}

#footer .nav li:after
{
    content:  "|";
    margin: 0 25px;
}

#footer .nav li:last-child:after
{
    content: '';
    margin: 0;
}

/*
 * Make footer stick to bottom
 * Based on http://ryanfait.com/sticky-footer/
 */

html, body
{
    height: 100%; 
}

#wrapper
{
    min-height: 100%;
    height: auto !important;
    height: 100%; 
    margin-bottom: -62px; /* #footer margin-top (20px) + #footer height (42px) */
}

#footer
{
    margin-top: 20px;
    height: 42px;
    overflow: hidden;
            box-sizing: border-box;
       -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

/*
 * POPUPS
 */

.popup-inline
{
    background-color: #fff;
    padding: 20px 30px;
    max-width: 650px;
    margin: 0 auto;
    position: relative;
}

.popup-ajax .mfp-content
{
    background-color: #fff;
    width: 920px !important;
}

/* for forms displayed in lightbox mode (via magnificPopup plugin), use different shadow */
.mfp-content .form
{
    -webkit-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.5);
       -moz-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.5);
            box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.5);
}

/*
 * MESSAGES
 */


/* Alerts from Bootstrap */

#alerts
{
    top: 41px; /* navbar height + border */
    width: 400px;
    left: 50%;
    margin-left: -200px;
    z-index: 101;
}

.alert
{
    padding: 8px 35px 8px 14px;
    margin-bottom: 1em;
    color: #c09853;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
    background-color: #fcf8e3;
    border: 1px solid #fbeed5;
    -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
            border-radius: 4px;
}

.alert h4
{
    margin: 0;
}

.alert .close
{
    position: relative;
    top: -5px;
    right: -21px;
    line-height: 20px;
}

.alert-success
{
    color: #468847;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}

.alert-danger,
.alert-error
{
    color: #b94a48;
    background-color: #f2dede;
    border-color: #eed3d7;
}

.alert-info
{
    color: #3a87ad;
    background-color: #d9edf7;
    border-color: #bce8f1;
}

.alert-block
{
    padding-top: 14px;
    padding-bottom: 14px;
}

.alert-block > p,
.alert-block > ul
{
    margin-bottom: 0;
}

.alert-block p + p
{
    margin-top: 5px;
}

.close
{
    float: right;
    font-size: 20px;
    font-weight: bold;
    line-height: 20px;
    color: #000000;
    text-shadow: 0 1px 0 #ffffff;

    opacity: 0.2;
    filter: alpha(opacity=20);
}

.close:hover
{
    color: #000000;
    text-decoration: none;
    cursor: pointer;

    opacity: 0.4;
    filter: alpha(opacity=40);
}

button.close
{
    padding: 0;
    cursor: pointer;
    background: transparent;
    border: 0;
    -webkit-appearance: none;
}

.fade
{
  opacity: 0;
  -webkit-transition: opacity 0.15s linear;
     -moz-transition: opacity 0.15s linear;
       -o-transition: opacity 0.15s linear;
          transition: opacity 0.15s linear;
}

.fade.in
{
  opacity: 1;
}


/*
 * PAGE BODY
 */

#body
{
    margin: 0;
    padding: 1px 0 0;
}

#body:after
{
    content: ".";
    display: block;
    height: 0;
    width: 0;
    clear: both;
    visibility: hidden;
}

/* TABLES */

.module table,
.module-primary table
{
    width: 100%;
}

td.language,
td.code,
td.profile,
td.username
{
    padding-left: 5px;
}

html[dir="rtl"] td.language,
html[dir="rtl"] td.code,
html[dir="rtl"] td.profile,
html[dir="rtl"] td.username
{
    padding-left: 0;
    padding-right: 5px;
}

/* table row colors, see 'Table Row Colors.psd' */

tr.even,
td.even,
li.even
{
    background: #f5fbfd;
}

/* MODULES */

.clear
{
    clear: both;
}

.module
{
    width: 48%;
    float: right;
    margin: 0;
}

html[dir="rtl"] .module
{
    float: left;
}

.module.first
{
    float: left;
}

html[dir="rtl"] .module.first
{
    float: right;
}

.hd h2
{
    margin: 1em 0.5em 0;
    border-bottom: 1px solid #eee;
}

html[dir="rtl"] .hd h2
{
    margin-left: 0;
    margin-right: 0.5em;
}

.last-action
{
    margin: 1em 0 1em 0;
    padding: 0.5em;
    background-color: #f8f8f8;
    border: 1px solid #d9d9d9;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
}

html[dir="rtl"] .last-action
{
    margin-left: 0;
    margin-right: 1em;
}

.last-action img
{
    vertical-align: middle;
}

.last-action .extra-item-meta
{
    color: #999;
}

.hd h3
{
    border-top: 1px solid #eee;
    margin: 1em 0 0 0;
}

.hd h3 span
{
    position: relative;
    top: -10px;
    padding-right: 5px;
    background-color: #fff;
}

html[dir="rtl"] .hd h3 span
{
    padding-right: 0;
    padding-left: 5px;
}

.bd
{
    margin: 1em;
}

.nomargin
{
    margin: 0;
}

.bd h2,
{
    margin-bottom: 0.5em;
}

.bd h3
{
    font-size: 120%;
}

.bd h4
{
    font-size: 100%;
}

/* USER PROFILES */

#user-profile
{
    float: none;
    width: 100%;
}

#user-contributions-wrapper
{
    margin-right: 220px;
}

html[dir="rtl"] #user-contributions-wrapper
{
    margin-right: auto;
    margin-left: 220px;
}

#user-contributions
{
    float: left;
    width: 100%;
}

html[dir="rtl"] #user-contributions
{
    float: right;
}

#user-contributions table
{
    margin-top: 0.5em;
    margin-bottom: 1.5em;
}

#user-contributions table td
{
    padding: 5px;
    width: 16.6%;
}

#user-meta-wrapper
{
    float: right;
    width: 200px;
}

html[dir="rtl"] #user-meta-wrapper
{
    float: left;
}

#user-meta
{
    margin: 0 20px;
}

#user-meta img
{
    border: 1px solid #eee;
    padding: 5px;
}

#user-meta .user-name
{
    font-size: 140%;
    line-height: 2;
}


/* UPLOAD FORM / UPDATE FROM VCS */

div#upload p,
div#upload ul,
div#update p
{
    margin-bottom: 0.5em;
}
/* ... */

